[package]
name = "remo_e_exporter"
version = "0.1.0"
authors = ["Sorah Fukumori <her@sorah.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = { version = "0.4.11", features = ["serde"] }
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
thiserror = "1.0.16"
tokio = { version = "0.2.20", features = ["macros"] }
prometheus = "0.8.0"
hyper = "0.13.5"
warp = "0.2.2"
